# simple-fastmcp-example

./: .gitignore  README.md  pyproject.toml
src/: client.py
src/fastmcp_server/: remote_server.py
